[package]
name = "hyper-inspect-io"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "1.5.1"
hyper-util = { version = "0.1.10", optional = true, features = ["client-legacy"] }
pin-project = "1.1.7"

[features]
__examples = []
hyper-util = ["dep:hyper-util"]

[dev-dependencies]
bytes = "1.9.0"
futures = "0.3.31"
http = "1.2.0"
http-body-util = "0.1.2"
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
hyper-inspect-io = { path = ".", features = ["__examples", "hyper-util"] }
hyper-util = { version = "0.1.10", features = ["http1", "http2", "server", "tokio"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5.2", features = ["util"] }
